{
    "name": "MobileControls",
    "maps": [
        {
            "name": "Mobile",
            "id": "e59075b7-ca23-415b-ad79-10eb296bdffe",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "cb81c750-fbd0-46d5-b88f-e3336a8741fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "c1680d57-54c4-4b11-a906-9ea9655508e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "cc1c137d-df8f-4167-b134-0f31d371b801",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59d54226-0d4b-4d89-932d-917298ad423f",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac6a740d-87b2-49fd-b015-43a374c9f79f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9697de1b-9ab6-4190-9fe4-18f03e29e129",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}